--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "jsdom": "^26.1.0",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.3",
+    "@playwright/test": "^1.55.0"
   }
 }
