Ignore Playwright report variants

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ __pycache__/
 .pytest_cache/
 playwright-report/
 test-results/
+playwright-report-*/
+test-results-*/
 app/session_store/
 logs/
 !tools/logs/
