T-001: Update branding in metadata/log tooling and remove Live Stats label (Feature: 20260131-branding-log-cleanup)
Input: CR-20260131-1410
Decisions: D-20260131-1410
Feature: 20260131-branding-log-cleanup
Spec: docs/specs/20260131-branding-log-cleanup/spec.md
Tasks: docs/specs/20260131-branding-log-cleanup/tasks.md
Progress: docs/progress.txt

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome-interview-frontend",
+  "name": "preptalk-frontend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
