--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-multipart>=0.0.9
 httpx>=0.27.0
 pytest>=7.4.0
 google-genai>=1.50.0
+openai>=1.0.0
 fpdf2>=2.7.0
 pypdf>=5.0.0
 python-docx>=1.1.2
