docs: add Apache-2.0 license and metadata

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "preptalk-frontend",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "type": "module",
   "scripts": {
     "test": "vitest run",
